--- a/README
+++ b/README
@@ -1,1 +1,10 @@
-readme
+# about
+
+Timelapse on MacBook
+
+# isight.sh
+
+1 get screenshot(A)
+2 get MacBook Camera shot(B)
+3 mearge (A)&(B)
+4 (A+B) import to Photos.app
